# domi-indexer

./: .env  README.md  config.json  docker-compose.yml
geyser-plugin/: .gitignore  Cargo.toml  config.json
geyser-plugin/src/: geyser_plugin_postgres.rs  lib.rs  postgres_client.rs
geyser-plugin/src/postgres_client/: postgres_client_transaction.rs
postgres/: Dockerfile
rpc-server/: Dockerfile  README.md  bun.lockb  package.json  pm2.config.js  tsconfig.json
rpc-server/src/: index.ts
rpc-server/src/database/: index.ts  schema.ts
rpc-server/src/resources/inscriptions/: router.ts  service.ts
scripts/: create_schema.sql  drop_schema.sql
